# robotics_line

./: .gitignore  .gitmodules  HANDOFF_POS.yml  README.md  pyproject.toml
Camera/Data/: 054012620021.mvdat
Camera/calibration/: label_data.py
Camera/log/: warning_20250410-172948.197625
camera/calibration/: FANUCethernetipDriver.py  calibrate.py  camera-params.json  camera.py  camera_settings_old.txt  gather.py  new_cam_settings.txt  new_pos.yaml  pos.yaml  pos2.yaml  robot_controller.py  settings.py  temp.py  training2.yaml
camera/demo/: snap1.RAW
camera/document/: MVSDK_API_ENG.chw
camera/dump/: _camera_api_8h_source.html  _camera_define_8h_source.html  _camera_grabber_8h_source.html  _camera_image_8h_source.html  _camera_status_8h_source.html  _camera_zoom_tool_8h_source.html  annotated.html  arch_contents.html  arch_frameset.html  arch_header.html  classes.html  dir_856524284ebe840938865dc061f982fb.html  examples.html  files.html  functions.html  functions_vars.html  grab_8cpp-example.html  grab_ex_8cpp-example.html  group___a_p_i___a_d_v_a_n_c_e.html  group___a_p_i___b_a_s_i_c.html  group___a_p_i___c_l_o_s_e.html  group___a_p_i___c_o_l_o_r.html  group___a_p_i___d_e_a_d___p_i_x_e_l.html  group___a_p_i___d_i_s_p_l_a_y.html  group___a_p_i___e_n_h_a_n_c_e.html  group___a_p_i___e_n_u_m.html  group___a_p_i___e_x_p_o_s_u_r_e.html  group___a_p_i___g_p_i_o.html  (+64 more)
crx10_modbus/: .gitignore
src/: FANUCethernetipDriver.py  async_reader_writer.py  client.py  data_block.py  helper.py  modbus.py  robot_controller.py  ros_2_demo.py  server.py  server_async.py
(+725 files in other folders)
