[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "robotics-line"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "opencv-python>=4.11.0.86",
    "pycomm3>=1.2.14",
    "pydantic>=2.11.1",
    "pymodbus>=3.8.6",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "labelimg>=1.8.6",
]
